# Cytomine-installer

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pylintrc  requirements-dev.txt  setup.cfg
bootstrapper/: __version__.py  deploy.py  deployment_files.py  deployment_folders.py  env_generator.py  env_store.py  errors.py  parser.py  util.py
bootstrapper/actions/: base.py  clean.py  deploy.py  errors.py  util.py
bootstrapper/deployment/: deploy.py  deployment_files.py  deployment_folders.py  enums.py  env_generator.py  env_store.py  errors.py
bootstrapper/scripts/: cytoboot.py  main.py
cytomine_installer/: __version__.py  errors.py  parser.py  util.py
cytomine_installer/actions/: base.py  clean.py  deploy.py  errors.py  util.py
cytomine_installer/deployment/: deployment_files.py  deployment_folders.py  enums.py  env_generator.py  env_store.py  errors.py  installer_config.py
cytomine_installer/deployment/util/: trie.py
cytomine_installer/scripts/: ctmn.py
docker/: Dockerfile
tests/: test_deploy.py  test_deployment_files.py  test_deployment_folders.py  test_env_generator.py  test_env_store.py  test_installer_config.py  test_trie.py  test_util.py  util.py
tests/files/: cytomine.invalid-top-level-sections.yml  cytomine.mini.2.yml  cytomine.mini.3.yml  cytomine.mini.merge2->3.yml  cytomine.mini.yml  cytomine.unknown-value-type.yml  cytomine.valid.yml  docker_compose.valid.yml  fake_installer_config.yml
tests/files/fake_multi_server/: cytomine.yml
tests/files/fake_single_server/: docker-compose.yml
(+19 files in other folders)
