[metadata]
name = bootstrapper
version = attr: bootstrapper.__version__.VERSION
description = A tool for generating docker-compose-based deployment configuration of Cytomine
long_description = file: README.md
keywords = cytomine, docker, docker-compose, deployment, automation
classifiers =
    Programming Language :: Python :: 3.10
author = Romain Mormont
author_email = romain.mormont@cytomine.com

[options]
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    cytoboot = bootstrapper.scripts.cytoboot:run
